edit some typos

--- a/aks-test.ipynb
+++ b/aks-test.ipynb
@@ -6,14 +6,14 @@
     "collapsed": false
    },
    "source": [
-    "**Time complexity**\n",
+    "**Time complexity**  \n",
     "The following is the demo code for the [AKS primality test] (https://people.csail.mit.edu/vinodv/COURSES/MAT302-S13/AKSpaper.pdf) written in SageMath.\n",
     "The time complexity is broken down as following:  \n",
     "Step 1: The function `power_of_a_number(n)` will determine if a number n is a power of a number smaller than n. The time complexity of this algorithm is $O(\\sqrt{n}*\\sum_{i=2}^{\\sqrt{n}} \\log{n})$.  \n",
     "Step 2: Finding a number r such that $o_r(n) > \\log^2{n}$. This step takes $O(\\log^2{n} + \\log^5{n})$.  \n",
     "Step 3: If we find a number less than r that has a nontrivial GCD with n, then n is not prime. Using the built-in function finding gcd in SageMath which has the time complexity of $O(\\log{n})$, the total time complexity of this step is $O(r*\\log{n})$.  \n",
     "Step 4: Comparison is considered as constant time $O(1)$.  \n",
-    "Step 5: For each number from 1 to $\\sqrt(\\phi(r)*\\log{n})$, we have to compare $r$ coefficients of the elements $f$,$g$ is the quotient ring $\\mathbb{Z}_n[x]/\\langle x^r-1\\rangle$, so the total time is $O(r*\\sqrt{\\phi(r)}*\\log{n})$.  \n",
+    "Step 5: For each number from 1 to $\\sqrt{\\phi(r)}*\\log{n}$, we have to compare $r$ coefficients of the elements $f$,$g$ in the quotient ring $\\mathbb{Z}_n[x]/_{\\langle x^r-1\\rangle}$, so the total time is $O(r*\\sqrt{\\phi(r)}*\\log{n})$.  \n",
     "\n",
     "**Improvement**\n",
     "* The algorithm to determine if a number is a perfect power of another number can be improved as suggested in [this paper] (http://cr.yp.to/papers/powers.pdf)\n"
